// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders as expected with account 1`] = `
<div>
  <div
    class="header"
  >
    <span
      class="title basis-full md:basis-auto text-center text-xl font-medium badge"
    >
      path
    </span>
    <div
      class="text-center"
    >
      <div
        class="flex gap-1"
      >
        <div
          class=""
        >
          <div
            data-testid="AddTxDropdown"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header shows parent link 1`] = `
<div>
  <div
    class="header"
  >
    <span
      class="title basis-full md:basis-auto text-center text-xl font-medium badge"
    >
      <span>
        <a
          class="text-white text-opacity-50 hover:text-current"
          href="/dashboard/accounts/parent"
        >
          Assets
        </a>
        :
        account
      </span>
    </span>
    <div
      class="text-center"
    >
      <div
        class="flex gap-1"
      >
        <div
          class=""
        >
          <div
            data-testid="AddTxDropdown"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
        <div
          data-testid="FormButton"
        >
          <div
            data-testid="AccountForm"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
